# python-web-service-template

./: .gitignore  Dockerfile  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.py  config.secret.env.txt  config_dev.json  config_dev.yml  config_prod.json  config_prod.yml  load.py
config/util/: gen_jwt_key.sh
database/: db.py  ddl.sql
db/: __init__.py  db.py  ping.py  pool.py
log/: logger.py
model/: config.py
server/: __init__.py  auth.py  middleware.py  ping.py  route.py
server/graphql/: __init__.py  enum.py  mutation.py  query.py  scalar.py  schema.graphql  schema.py
server/handler/: ping.py
