[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["m1ckey <m1ckey@m1ckey.net>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.19.0"
uvicorn = "^0.17.6"
ariadne = "^0.15.0"
asyncpg = "^0.25.0"
google-cloud-logging = "^3.0.0"
google-cloud-secret-manager = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
